force-app/main/default/objects/Advertiser_Agency_Relationship__c/Advertiser_Agency_Relationship__c.object-meta.xml
<CustomObject>
    <description>Advertiser Agency Relationship</description>
    <label>Advertiser-Agency Relationship</label>
    <nameField>
        <displayFormat>AAR-{000000}</displayFormat>
        <label>Advertiser Agency Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertiser-Agency Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>