force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertiser-Agency Relationships</relationshipLabel>
    <relationshipName>Advertiser_Agency_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>