force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Advertiser_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Agency_Name__c</fullName>
    <formula>Advertiser__r.Name+&apos;-&apos;+Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Agency Name</label>
    <type>Text</type>
</CustomField>