force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/AdvertiserAgency__c.field-meta.xml
<CustomField>
    <fullName>AdvertiserAgency__c</fullName>
    <label>AdvertiserAgency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>