force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertiser-Agency Relationships (Agency)</relationshipLabel>
    <relationshipName>Advertiser_Agency_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>