force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/AgencyFormula__c.field-meta.xml
<CustomField>
    <fullName>AgencyFormula__c</fullName>
    <formula>Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>