force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Booking_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Next_Year__c</fullName>
    <label>Booking (Next Year)</label>
    <summarizedField>Account_Forecast__c.Booking_Next_Year__c</summarizedField>
    <summaryForeignKey>Account_Forecast__c.Advertiser_Agency_Relationship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>