force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Bookings_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Current_Year__c</fullName>
    <label>Bookings (Current Year)</label>
    <summarizedField>Account_Forecast__c.Bookings_Current_Year__c</summarizedField>
    <summaryForeignKey>Account_Forecast__c.Advertiser_Agency_Relationship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>