force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Brand_Direct__c.field-meta.xml
<CustomField>
    <fullName>Brand_Direct__c</fullName>
    <formula>ISBLANK(Agency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Direct</label>
    <type>Checkbox</type>
</CustomField>