force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Forecast_Sum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sum__c</fullName>
    <label>Forecast(Sum)</label>
    <summarizedField>AAR_Split_Owner__c.Forecast_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>AAR_Split_Owner__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AAR_Split_Owner__c.Advertiser_Agency_Relationship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>