force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Override_Owner__c.field-meta.xml
<CustomField>
    <fullName>Override_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Owner</label>
    <type>Checkbox</type>
</CustomField>