force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Pipeline_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Current_Quarter__c</fullName>
    <label>Pipeline (Current Quarter)</label>
    <summarizedField>Account_Forecast__c.Pipeline_Current_Quarter__c</summarizedField>
    <summaryForeignKey>Account_Forecast__c.Advertiser_Agency_Relationship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>