force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Owner</label>
    <type>Text</type>
</CustomField>