force-app/main/default/objects/Advertiser_Agency_Relationship__c/fields/Total_Historical_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Historical_Opportunity__c</fullName>
    <label>Total Historical Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>