force-app/main/default/objects/Advertiser_Agency_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Agency__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Brand_Direct__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>